----- cvs ci ------
Tue Oct  3 00:19:14 MEZ 2000
tobi:
* Support Jam Direct flag (JMSG_DIRECT) via MSGXX1 Squish flag, which is
  already used for "Direct" flagging by a lot of Squish programs.

----- cvs ci ------
Fri Sep 15 10:57:04 MSD 2000
max (patch from Serguei Revtov):
* core dump on Solaris (create_semaphore)

----- cvs ci ------
Wed Sep 13 14:40:01 NOVST 2000
max (patches from Pavel Gulchouk):
* JAM linking with empty msg subjects

----- cvs ci ------
Mon Sep 11 10:56:46 NOVST 2000
max (patches from Pavel Gulchouk):
* JAM fix - "Path:" changed to "PATH:"

----- cvs ci ------
Wed Sep  6 17:36:17 NOVST 2000
max (patch from Serguei Revtov):
* compiling on Win9x

----- cvs ci ------
Tue Sep  5 23:04:04 NOVST 2000
max (patches from Pavel Gulchouk):
* jam updates (TZUTC kludge processing & more...)
* get_word() & get_dword() fixes

----- cvs ci ------
Mon Sep 04 12:54:10 NOVST 2000
max (patches from Pavel Gulchouk):
* semaphores for OS/2
* jam update for "hpt link" & "hptlink"
* fix: writing zero-terminated msg, reading any msg.

----- cvs ci ------
Sun Sep 03 19:54:10 NOVST 2000
max (patches from Pavel Gulchouk):
* ReplyTo/Reply1st/ReplyNext support ("hpt link" links jam areas now)

----- cvs ci ------
Tue Aug 29 22:54:10 NOVST 2000
max (patches from Pavel Gulchouk):
* great JAM bugfix! (ex: netmail looks good after packing)

----- cvs ci ------
Mon Aug 28 12:46:58 UTC 2000
sms:
* fixed segfault if area could not be opened

----- cvs ci ------
Thu Aug 24 13:54:51 UTC 2000
sms:
* fixed return value of _sqlock

----- cvs ci ------
Thu Aug 24 13:18:35 UTC 2000
sms:
* renamed exported Squish*-functions to apiSquish* to prevent name collisions
  (e.g. in MsgEd)

----- cvs ci ------
Thu Aug 24 12:39:45 UTC 2000
sms:
* added missing _SquishInit call in MsgOpenApi

----- cvs ci ------
Thu Aug 24 12:15:35 UTC 2000
sms:
* init semaphores for squish routines in MsgOpenApi, destroy them in 
  MsgCloseApi

----- cvs ci ------
Sun Aug 20 10:00:00 CET 2000
oliver grimm ():